k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: temp-converter-grpc
  labels:
    app.kubernetes.io/part-of: temp-converter-grpc
