k8s/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: temp-converter-grpc
  labels:
    app: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: envoy
          image: us-central1-docker.pkg.dev/verteilte-systeme-487315/temp-converter-grpc/envoy:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /ready
              port: 9901
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 9901
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config
